# gfxp_phij

exercises/exercise_8_solutions/: CMakeLists.txt  main.cpp
exercises/exercise_8_solutions/shaders/: common_shading.vert  leaf_shading.frag  pbr_shading.frag
